<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/colorWhite"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="200dp"
        android:paddingBottom="20dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/singleBookingName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/slider_tiny_height"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_weight="0.1"
            android:background="@drawable/signin_box"
            android:fontFamily="@font/droidsans"
            android:hint="@string/customer_name"
            android:inputType="textCapCharacters"
            android:paddingLeft="20dp"
            android:paddingTop="25dp"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/singleBookingTrain"
            android:layout_width="match_parent"
            android:layout_height="@dimen/slider_tiny_height"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_weight="0.1"
            android:background="@drawable/signin_box"
            android:fontFamily="@font/droidsans"
            android:hint="@string/train"
            android:inputType="textCapCharacters"
            android:paddingLeft="20dp"
            android:paddingTop="25dp"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/singleBookingDate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/slider_tiny_height"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_weight="0.1"
            android:background="@drawable/signin_box"
            android:fontFamily="@font/droidsans"
            android:hint="@string/bookingDate"
            android:inputType="textCapCharacters"
            android:paddingLeft="20dp"
            android:paddingTop="25dp"
            android:textAllCaps="true" />

        <EditText
            android:id="@+id/singleBookingTickets"
            android:layout_width="match_parent"
            android:layout_height="@dimen/slider_tiny_height"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_weight="0.1"
            android:background="@drawable/signin_box"
            android:fontFamily="@font/droidsans"
            android:hint="@string/ticket"
            android:inputType="number"
            android:paddingLeft="20dp"
            android:textAllCaps="true"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/singleBookingReservationDate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/slider_tiny_height"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_weight="0.1"
            android:background="@drawable/signin_box"
            android:fontFamily="@font/droidsans"
            android:hint="@string/reservationDate"
            android:inputType="textCapCharacters"
            android:paddingLeft="20dp"
            android:paddingTop="25dp"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/singleBookingNic"
            android:layout_width="match_parent"
            android:layout_height="@dimen/slider_tiny_height"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_weight="0.1"
            android:background="@drawable/signin_box"
            android:fontFamily="@font/droidsans"
            android:hint="@string/nic"
            android:inputType="textCapCharacters"
            android:paddingLeft="20dp"
            android:paddingTop="25dp"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/View_btn"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/rount_button"
            android:paddingLeft="65dp"
            android:paddingTop="10dp"
            android:text="@string/update"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_2"
        android:layout_width="421dp"
        android:layout_height="113dp"
        android:layout_weight="0.15"
        android:background="@drawable/round_bottom_bk"
        android:rotation="180"
        tools:layout_editor_absoluteX="-5dp"
        tools:layout_editor_absoluteY="-2dp">

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="150dp"
        android:layout_height="150dp"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="36dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/user" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/white_border" />
    </FrameLayout>



</androidx.constraintlayout.widget.ConstraintLayout>